build/ml/cp_parser.output
   0  $accept : %entry% $end

   1  main : main_instr EOI
   2       | top_instr EOI
   3       | ENDFILE

   4  main_instr : OPEN expr
   5             | INCLUDE STRING
   6             | PROCESS expr SEP block_env
   7             | PROCESS expr SEP IMPORT
   8             | MODULE expr SEP top_block_env
   9             | FUNCTION expr LPAREN arg_list RPAREN SEP block_env
  10             | FUNCTION expr UNIT SEP block_env
  11             | FUNCTION expr LPAREN arg_list RPAREN RETURN LPAREN arg_list RPAREN SEP block_env
  12             | FUNCTION expr UNIT RETURN LPAREN arg_list RPAREN SEP block_env
  13             | EXPORT element_list
  14             | IMPORT element_list

  15  top_block_or_instr : top_instr
  16                     | top_block_env

  17  top_instr : mon_map
  18            | func
  19            | top_decl
  20            | decl
  21            | FOR expr EQ expr TO expr DO top_block_or_instr
  22            | FOR expr EQ expr DOWNTO expr DO top_block_or_instr
  23            | IF expr THEN top_block_or_instr ELSE top_block_or_instr
  24            | IF expr THEN top_block_or_instr
  25            | main_instr

  26  top_block_env : BLOCK_START top_block BLOCK_END
  27                | BLOCK_START top_block BLOCK_END WITH expr

  28  top_block : top_instr EOI
  29            | top_instr EOI top_block

  30  top_block_instr : top_instr

  31  decl : TYPE expr SEP LLIST type_list RLIST
  32       | TYPE expr SEP LLIST type_list RLIST WITH expr
  33       | EXCEPTION element
  34       | COMP element_list SEP expr
  35       | COMP element_list SEP expr INIT LLIST element_list RLIST
  36       | CONST element_list SEP expr INIT expr
  37       | SIGNAL element_list SEP expr
  38       | SIGNAL element_list SEP expr INIT expr
  39       | ARRAY element_list SEP OBJECT element
  40       | ARRAY element_list SEP OBJECT element WITH expr
  41       | ARRAY element_list SEP COMP element
  42       | ARRAY element_list SEP COMP element WITH expr
  43       | ARRAY element_list SEP element OF element
  44       | ARRAY element_list SEP element OF element WITH expr
  45       | ARRAY element_list SEP element OF block_env
  46       | ARRAY element_list SEP element OF element IN element
  47       | REG element_list SEP expr
  48       | REG element_list SEP expr WITH expr
  49       | REG element_list SEP expr INIT expr
  50       | VAR element_list SEP expr IN expr
  51       | VAR element_list SEP expr IN expr INIT expr
  52       | DBLOCK expr
  53       | DBLOCK expr WITH expr
  54       | OBJECT element_list SEP expr
  55       | OBJECT element_list SEP expr WITH expr

  56  type_list : type_expr EOI
  57            | type_expr EOI type_list

  58  type_expr : PORT element_list SEP expr expr
  59            | element_list SEP expr
  60            | IDENT

  61  arg_list : arg_expr
  62           | arg_expr ARGSEP arg_list

  63  arg_expr : element_list SEP expr
  64           | IDENT

  65  top_decl : CHAN element_list SEP expr
  66           | CHAN element_list SEP expr WITH expr
  67           | QUEUE element_list SEP expr
  68           | QUEUE element_list SEP expr WITH expr
  69           | DOMAIN element_list SEP STRING

  70  block_env : BLOCK_START block BLOCK_END
  71            | BLOCK_START block BLOCK_END WITH expr

  72  block_env_case_list : BLOCK_START case_list BLOCK_END
  73                      | BLOCK_START case_list BLOCK_END WITH expr

  74  block : block_env EOI
  75        | block_env EOI block
  76        | control EOI
  77        | control EOI block
  78        | decl EOI
  79        | decl EOI block
  80        | mon_map EOI
  81        | mon_map EOI block
  82        | instr EOI
  83        | instr EOI block
  84        | instr_list EOI
  85        | instr_list EOI block

  86  case : WHEN expr_list SEP instr EOI
  87       | WHEN expr_list SEP block_env EOI

  88  case_list : case
  89            | case case_list

  90  block_instr : instr

  91  func : expr UNIT
  92       | expr LPAREN args RPAREN

  93  mon_map : element MAPS element
  94          | element MAPSREV element
  95          | MON element_list
  96          | MON element_list WITH DEBUG

  97  time : element
  98       | element timeunit

  99  instr_list : instr ARGSEP instr
 100             | instr ARGSEP instr_list

 101  block_or_instr : instr
 102                 | block_env
 103                 | instr_list

 104  block_or_instr2 : instr
 105                  | BLOCK_START block BLOCK_END

 106  control : WAIT FOR time
 107          | WAIT FOR time WITH block_or_instr
 108          | WAIT FOR time WITH block_or_instr ELSE block_or_instr
 109          | WAIT FOR expr
 110          | WAIT FOR expr WITH block_or_instr
 111          | WAIT FOR expr WITH block_or_instr ELSE block_or_instr
 112          | IF expr THEN block_or_instr ELSE block_or_instr
 113          | IF expr THEN block_or_instr
 114          | FOR expr EQ expr TO expr DO block_instr
 115          | FOR expr EQ expr TO expr DO block_env
 116          | FOR expr EQ expr DOWNTO expr DO block_instr
 117          | FOR expr EQ expr DOWNTO expr DO block_env
 118          | WHILE expr DO block_instr
 119          | WHILE expr DO block_env
 120          | ALWAYS DO block_env
 121          | MATCH expr WITH block_env_case_list
 122          | TRY block_or_instr2 WITH block_env_case_list
 123          | RAISE element

 124  instr : element_list SEP expr
 125        | expr ASSIGN expr
 126        | IDENT
 127        | control
 128        | func

 129  args : expr
 130       | expr ARGSEP args

 131  spargs : expr
 132         | expr spargs

 133  expr : func
 134       | expr PLUS expr
 135       | MINUS expr
 136       | LNOT expr
 137       | BNOT expr
 138       | expr MINUS expr
 139       | expr TIMES expr
 140       | expr DIVI expr
 141       | expr LAND expr
 142       | expr LOR expr
 143       | expr LXOR expr
 144       | expr EQ expr
 145       | expr LT expr
 146       | expr GT expr
 147       | expr LEQ expr
 148       | expr GEQ expr
 149       | expr NEQ expr
 150       | expr BOR expr
 151       | expr BAND expr
 152       | expr BXOR expr
 153       | expr LSL expr
 154       | expr LSR expr
 155       | expr ASL expr
 156       | expr ASR expr
 157       | expr EXP expr
 158       | expr LOG expr
 159       | expr MAX expr
 160       | expr MIN expr
 161       | LPAREN expr RPAREN
 162       | expr TO expr
 163       | expr DOWNTO expr
 164       | TO_INT LPAREN expr RPAREN
 165       | TO_BOOL LPAREN expr RPAREN
 166       | TO_LOG LPAREN expr RPAREN
 167       | TO_CHR LPAREN expr RPAREN
 168       | SIZEOF LPAREN expr RPAREN
 169       | expr CONCAT expr
 170       | expr timeunit
 171       | expr frequnit
 172       | element

 173  element : IDENT
 174          | ID
 175          | Z
 176          | STRING
 177          | CHAR
 178          | CHAN
 179          | QUEUE
 180          | REG
 181          | VAR
 182          | SIGNAL
 183          | PROCESS
 184          | UNIT
 185          | LPAREN RPAREN
 186          | element LBRAK expr RBRAK
 187          | element LBRAK element_list RBRAK
 188          | element LBRAK expr TO expr RBRAK
 189          | element LBRAK element DOWNTO element RBRAK
 190          | element DOT LBRAK expr RBRAK
 191          | element DOT LBRAK element_list RBRAK
 192          | element DOT element
 193          | TO_INT LPAREN expr RPAREN
 194          | TO_BOOL LPAREN expr RPAREN
 195          | TO_LOG LPAREN expr RPAREN
 196          | TO_CHR LPAREN expr RPAREN
 197          | LLIST element_list RLIST

 198  element_list : element
 199               | element ARGSEP element_list

 200  expr_list : expr
 201            | OTHERS
 202            | expr ARGSEP expr_list

 203  timeunit : NSEC
 204           | USEC
 205           | MSEC
 206           | SEC

 207  frequnit : GHZ
 208           | MHZ
 209           | KHZ
 210           | HZ

 211  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (211)

	STRING  shift 3
	CHAR  shift 4
	IDENT  shift 5
	VAR  shift 6
	REG  shift 7
	CONST  shift 8
	SIGNAL  shift 9
	ARRAY  shift 10
	OBJECT  shift 11
	COMP  shift 12
	CHAN  shift 13
	QUEUE  shift 14
	PROCESS  shift 15
	MODULE  shift 16
	FUNCTION  shift 17
	IMPORT  shift 18
	EXPORT  shift 19
	INCLUDE  shift 20
	ENDFILE  shift 21
	FOR  shift 22
	IF  shift 23
	EXCEPTION  shift 24
	TYPE  shift 25
	ID  shift 26
	Z  shift 27
	MON  shift 28
	DOMAIN  shift 29
	LLIST  shift 30
	LPAREN  shift 31
	OPEN  shift 32
	DBLOCK  shift 33
	UNIT  shift 34
	TO_INT  shift 35
	TO_BOOL  shift 36
	TO_LOG  shift 37
	TO_CHR  shift 38
	SIZEOF  shift 39
	MINUS  shift 40
	LNOT  shift 41
	BNOT  shift 42
	.  error

	main  goto 43
	main_instr  goto 44
	top_instr  goto 45
	expr  goto 46
	mon_map  goto 47
	func  goto 48
	top_decl  goto 49
	decl  goto 50
	element  goto 51


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	element : STRING .  (176)

	.  reduce 176


state 4
	element : CHAR .  (177)

	.  reduce 177


state 5
	element : IDENT .  (173)

	.  reduce 173

